traces/bug_145.txt
examples++-load/gmsh.cpp:381: error: DEAD_STORE
  The value written to &partition (type int) is never used.
Showing all 1 steps of the trace


examples++-load/gmsh.cpp:381:3: Write of unused value
379.   		int physical = (numTags > 0) ? data[4 - numTags] : 0;
380.   		int elementary = (numTags > 1) ? data[4 - numTags + 1] : 0;
381.   		int partition = (numTags > 2) ? data[4 - numTags + 2] : 0;
         ^
382.   		int *indices = &data[numTags + 1];
383.   		
